# leptonic-template-tauri

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: app.rs  main.rs
src-tauri/: .gitignore  Cargo.toml
style/: main.scss
style/leptonic/components/: slider.scss
style/leptonic/themes/: dark.scss  light.scss
