[package]
name = "leptonic-template-tauri-ui"
version = "0.0.0"
edition = "2021"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"

[workspace]
members = ["src-tauri"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.85"
leptonic = { git = "https://github.com/lpotthast/leptonic", branch = "hooks", features = ["full"] }
leptos = { version = "0.8.15", features = ["csr"] }
leptos_meta = { version = "0.8.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-wasm = "0.2.1"
wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.58"
